Completes the assignment.
Completes the assignment.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <button type="submit" class="btn btn-secondary form-button" id="s-answer">Submit Answer</button>
             <div class="mb-3 mt-3">
                 <p class="fs-5 text-center">Question <span id="qnumber">1</span> of 10</p>
+                <div id="message" class="message-box text-center mt-3 mb-3"></div>
                 <p class="text-center">
                     Correct Answer: <span id="correctanswer">0</span><br>
                     Incorrect Answer: <span id="incorrectanswer">0</span>
